[gd_scene load_steps=3 format=3 uid="uid://bqt5782yuqc58"]

[ext_resource type="Script" path="res://scenes/ui/map_selection/map_selection.gd" id="1_g7fqc"]
[ext_resource type="Texture2D" uid="uid://d17h5aestmff1" path="res://assets/menu/kunti-inferno-page.png" id="2_yav6r"]

[node name="MapSelection" type="Node2D"]
script = ExtResource("1_g7fqc")

[node name="Kunti-inferno-page" type="Sprite2D" parent="."]
position = Vector2(16, 0)
scale = Vector2(0.217333, 0.217333)
texture = ExtResource("2_yav6r")

[node name="Camera" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="BtnPlay" type="Button" parent="."]
offset_left = -520.0
offset_top = -143.0
offset_right = -338.0
offset_bottom = -36.0
theme_override_font_sizes/font_size = 72
text = "PLAY"

[node name="BtnQuit" type="Button" parent="."]
offset_left = -519.5
offset_top = 36.0
offset_right = -338.5
offset_bottom = 143.0
theme_override_font_sizes/font_size = 72
text = "QUIT"

[connection signal="pressed" from="BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="BtnQuit" to="." method="_on_btn_quit_pressed"]
